--- a/HomeManager/Resources/StylesDictionary.xaml
+++ b/HomeManager/Resources/StylesDictionary.xaml
@@ -340,6 +340,40 @@
         </Style.Triggers>
     </Style>
 
+    <Style x:Key="myRibbonButton" TargetType="RibbonButton">
+        <Setter Property="Width" Value="25" />
+        <Setter Property="Height" Value="25" />
+        <Setter Property="Margin" Value="5" />
+        <Setter Property="Padding" Value="1" />
+        <Setter Property="Background" Value="Transparent" />
+        <Setter Property="BorderThickness" Value="0" />
+
+
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="RibbonButton">
+                    <Border
+                        Background="{TemplateBinding Background}"
+                        BorderBrush="{StaticResource myDagboekButtonIconColor}"
+                        BorderThickness="{TemplateBinding BorderThickness}">
+                        <Path
+                            HorizontalAlignment="Center"
+                            VerticalAlignment="Center"
+                            Data="{Binding Path=Content, RelativeSource={RelativeSource TemplatedParent}}"
+                            Fill="{StaticResource myDagboekButtonIconColor}"
+                            Stretch="Uniform" />
+                    </Border>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+        <Style.Triggers>
+            <Trigger Property="IsMouseOver" Value="True">
+                <Setter Property="Background" Value="DeepSkyBlue" />
+                <Setter Property="BorderThickness" Value="1" />
+            </Trigger>
+        </Style.Triggers>
+    </Style>
+
     <!--  dagboekkleurbutton werkt nog niet  -->
     <Style x:Key="myFontColorButton" TargetType="Button">
         <Setter Property="Margin" Value="1" />
