--- a/HomeManager/View/ToDo/ucTodo.xaml
+++ b/HomeManager/View/ToDo/ucTodo.xaml
@@ -5,12 +5,12 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:local="clr-namespace:HomeManager.View"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    xmlns:uc="clr-namespace:HomeManager.View"
+    xmlns:uc="clr-namespace:HomeManager.View" xmlns:viewmodel="clr-namespace:HomeManager.ViewModel"
+    x:Name="ucTodoControl"
     d:DesignHeight="450"
     d:DesignWidth="800"
     Background="White"
     mc:Ignorable="d">
-
     <Grid DataContext="{Binding Source={StaticResource VML}, Path=ToDoViewModel}">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="150" />
@@ -58,7 +58,7 @@
             ItemsSource="{Binding MijnCollectie}"
             SelectedItem="{Binding SelectedCollectie, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
 
-        <ListBox
+        <ListView
             Name="ToDoItemOpvulling"
             Grid.Row="1"
             Grid.Column="1"
@@ -66,13 +66,61 @@
             VerticalAlignment="Stretch"
             BorderBrush="Gray"
             BorderThickness="1"
-            ItemsSource="{Binding Items}">
-            <ListBox.ItemTemplate>
+            ItemsSource="{Binding MijnCollectieTodoPopup}"
+            SelectedItem="{Binding MijnSelectedItemTodoPopup, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}">
+            <ListView.ItemTemplate>
                 <DataTemplate>
-                    <local:ucTodoItem />
+                    <Border
+                        Width="285"
+                        Margin="5"
+                        Padding="2"
+                        Background="{Binding IsKlaar, ConverterParameter=Background}"
+                        BorderBrush="{Binding IsKlaar, ConverterParameter=BorderBrush}"
+                        BorderThickness="1"
+                        CornerRadius="5">
+                        <StackPanel Orientation="Horizontal">
+                            <Rectangle Width="10" Fill="{Binding TodoColorID}" />
+                            <StackPanel>
+                                <TextBlock
+                                    FontSize="14"
+                                    FontWeight="Bold"
+                                    Foreground="Black"
+                                    Text="{Binding Onderwerp}" />
+                                <TextBlock
+                                    FontSize="12"
+                                    Foreground="Gray"
+                                    Text="{Binding Detail}" />
+                            </StackPanel>
+                            <CheckBox
+                                Margin="5,0"
+                                VerticalAlignment="Center"
+                                IsChecked="{Binding IsKlaar, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
+                            <Button
+                                Width="20"
+                                Height="20"
+                                Margin="5,0"
+                                VerticalAlignment="Center"
+                                Style="{StaticResource EditTodoImage}" />
+                            <Button
+                                Width="20"
+                                Height="20"
+                                Margin="5,0"
+                                VerticalAlignment="Center"
+                                Style="{StaticResource DeleteTodoImage}" />
+                            <Button
+                                Grid.Column="4"
+                                Width="20"
+                                Height="20"
+                                Margin="5,0"
+                                VerticalAlignment="Center"
+                                Style="{StaticResource PaperclipTodoImage}" />
+
+
+                        </StackPanel>
+                    </Border>
                 </DataTemplate>
-            </ListBox.ItemTemplate>
-        </ListBox>
+            </ListView.ItemTemplate>
+        </ListView>
 
         <ListBox
             Grid.Row="1"
