--- a/HomeManager/View/ToDo/ucTodo.xaml
+++ b/HomeManager/View/ToDo/ucTodo.xaml
@@ -2,12 +2,12 @@
     x:Class="HomeManager.View.ucTodo"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:converter="clr-namespace:HomeManager.Converter"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:local="clr-namespace:HomeManager.View"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:uc="clr-namespace:HomeManager.View"
     xmlns:viewmodel="clr-namespace:HomeManager.ViewModel"
-    xmlns:converter="clr-namespace:HomeManager.Converter"
     x:Name="ucTodoControl"
     d:DesignHeight="450"
     d:DesignWidth="800"
@@ -15,6 +15,7 @@
     mc:Ignorable="d">
     <UserControl.Resources>
         <converter:BoolToColorBrushConverter x:Key="BoolToColorBrushConverter" />
+        <converter:IntToBrushConverter x:Key="IntToBrushConverter" />
     </UserControl.Resources>
 
     <Grid DataContext="{Binding Source={StaticResource VML}, Path=ToDoViewModel}">
@@ -77,56 +78,72 @@
             <ListView.ItemTemplate>
                 <DataTemplate>
                     <Border
-                        Width="285"
-                        Margin="5"
-                        Padding="2"
+                        Width="300"
+                        Padding="5"
+                        HorizontalAlignment="Stretch"
+                        VerticalAlignment="Stretch"
                         Background="{Binding IsKlaar, Converter={StaticResource BoolToColorBrushConverter}, ConverterParameter=Background}"
                         BorderBrush="{Binding IsKlaar, Converter={StaticResource BoolToColorBrushConverter}, ConverterParameter=Border}"
                         BorderThickness="2"
                         CornerRadius="5">
-                        <StackPanel Orientation="Horizontal">
-                            <Rectangle Width="10" Fill="{Binding TodoColorID}" />
-                            <StackPanel>
-                                <TextBlock
-                                    FontSize="14"
-                                    FontWeight="Bold"
-                                    Foreground="Black"
-                                    Text="{Binding Onderwerp}" />
-                                <TextBlock
-                                    FontSize="12"
-                                    Foreground="Gray"
-                                    Text="{Binding Detail}" />
+                        <Grid>
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="*" />
+                                <ColumnDefinition Width="Auto" />
+                                <ColumnDefinition Width="Auto" />
+                                <ColumnDefinition Width="Auto" />
+                                <ColumnDefinition Width="Auto" />
+                            </Grid.ColumnDefinitions>
+                            <StackPanel Grid.Column="0" Orientation="Horizontal">
+                                <Rectangle
+                                    Width="5"
+                                    Margin="5"
+                                    Fill="{Binding TodoColorID}" />
+                                <StackPanel>
+                                    <TextBlock
+                                        FontSize="14"
+                                        FontWeight="Bold"
+                                        Foreground="Black"
+                                        Text="{Binding Onderwerp}" />
+                                    <TextBlock
+                                        FontSize="12"
+                                        Foreground="Gray"
+                                        Text="{Binding Detail}" />
+                                </StackPanel>
                             </StackPanel>
                             <CheckBox
+                                Grid.Column="1"
                                 Margin="5,0"
                                 VerticalAlignment="Center"
                                 IsChecked="{Binding IsKlaar, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
                             <Button
-                                Width="20"
-                                Height="20"
+                                Grid.Column="2"
+                                Width="10"
+                                Height="10"
                                 Margin="5,0"
                                 VerticalAlignment="Center"
                                 Style="{StaticResource EditTodoImage}" />
                             <Button
-                                Width="20"
-                                Height="20"
+                                Grid.Column="3"
+                                Width="10"
+                                Height="10"
                                 Margin="5,0"
                                 VerticalAlignment="Center"
                                 Style="{StaticResource DeleteTodoImage}" />
                             <Button
                                 Grid.Column="4"
-                                Width="20"
-                                Height="20"
+                                Width="8"
+                                Height="15"
                                 Margin="5,0"
+                                HorizontalAlignment="Right"
                                 VerticalAlignment="Center"
                                 Style="{StaticResource PaperclipTodoImage}" />
-
-
-                        </StackPanel>
+                        </Grid>
                     </Border>
                 </DataTemplate>
             </ListView.ItemTemplate>
         </ListView>
+
 
         <ListBox
             Grid.Row="1"
